fixtures/frontend/milestone-2/invalid/source-legacy-quantity-option/main.aivi
domain Duration over Int
    suffix sec : Int = value => Duration value

@source timer.every 120 with {
    jitterMs: 5sec
}
signal tick : Signal Unit
